# ProjektK_Embedded

./: Notest.md
FirstGeneratedProject/: CMakeLists.txt
blink/: CMakeLists.txt  main.c
hv_control/: CMakeLists.txt  main.cpp
hx711/: CMakeLists.txt  HX711.cpp  HX711.h  main.cpp
max31865/: CMakeLists.txt  MAX31865.cpp  MAX31865.h  main.cpp
mcp4725/: CMakeLists.txt  main.cpp  mcp4725.cpp  mcp4725.h
pwm_test/: CMakeLists.txt  main.c
tmc2209/: CMakeLists.txt  TMC2209.cpp  TMC2209.h  TMC2209_Registers.h  main.cpp  main_deprecated.c
uart/: CMakeLists.txt  main.c
uart_1/: CMakeLists.txt  main.c
